# xasm-old

./: .gitignore  CMakeLists.txt  grammar.lark  input.rs  main.py  parser.py
compiler/: main.py  prelude.py
examples/: fn.x  main.x  object.x  test.x
src/: main.cpp
